# osint-document-management

./: .gitignore  IMPLEMENTATION.md  README.md  package-lock.json  start.sh
ksei/: README.md
ksei/data/: idx-perusahaan-tercatat-keterbukaan-informasi.html
ksei/ownership-enrichment/: data.js
osint-app/: README.md  index.html  package-lock.json  package.json
osint-app/src/: App.tsx  styles.css
osint-app/src-tauri/: Cargo.toml  tauri.conf.json
osint-app/src-tauri/src/: main.rs
osint-app/src/components/: DocumentPanel.tsx  EntityDetailPanel.tsx  EntityList.tsx  NetworkGraph.tsx  ProjectDocumentManager.tsx  ProjectPanel.tsx  SearchPanel.tsx
osint-app/src/services/: api.ts
osint-cli/: README.md  main.py  pyproject.toml
osint-cli/data/: osint.db
osint-cli/src/: __init__.py  api_server.py  config.py  database.py  entity_resolver.py  main.py  ner_extractor.py  relationship_extractor.py  scraper.py  search.py  text_processor.py
osint-cli/tests/: conftest.py  test_cascade_delete.py  test_document_isolation.py  test_project_crud.py  test_project_list.py
samples/: palm_oil_report.html
