[project]
name = "osint-cli"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=0.10.0",
    "transformers>=4.37.0",
    "torch>=2.2.0",
    "PyMuPDF>=1.23.0",
    "typer>=0.9.0",
    "rich>=13.7.0",
    "httpx>=0.27.0",
    "python-Levenshtein>=0.23.0",
    "duckduckgo-search>=6.0.0",
    "scrapling>=0.3.0",
    "beautifulsoup4>=4.12.0",
    "scikit-learn>=1.4.0",
]

[project.scripts]
osint = "src.main:app"

[tool.setuptools]
packages = ["src"]
