[project]
name = "osint-cli"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=0.10.0",
    "transformers>=4.37.0",
    "torch>=2.2.0",
    "PyMuPDF>=1.23.0",
    "typer>=0.9.0",
    "rich>=13.7.0",
    "python-Levenshtein>=0.23.0",
    "duckduckgo-search>=6.0.0",
    "scrapling[fetchers]>=0.3.0",
    "scikit-learn>=1.4.0",
    "scipy>=1.12.0",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "python-multipart>=0.0.6",
    "pydantic>=2.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
osint = "src.main:app"

[tool.setuptools]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
